# synapse

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LAUNCH_CHECKLIST.md  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  docker-compose.yml  mkdocs.yml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.internal/: INTEGRATION_VERIFICATION.md
.internal/bench/: REAL_LIFE_TESTING.md  TESTING_PROTOCOL.md
.internal/docs/: Synapse_Architecture_and_Execution_Plan.docx
.internal/launch_drafts/: BLOG_v0.2.8.md  HN_v0.2.8.md
adapters/hosted/: README.md
adapters/local/: README.md
adapters/native/: README.md
bench/: LATENCY.md  ORGANIC_TEST_REPORT.md  PUBLIC_BENCHMARK.md  README.md  REAL_LIFE_TESTING.md  benchmarks.md  latency_microbench.py  option_b_claude_code_test.py  soak_test.py  strategy_simulator.py  test_12_real_sdk_smoke.py  test_13_real_otel_audit.py  test_b_headless_browser.py  uat_scenarios.py
bench/agenticflict/: .gitignore  README.md  run_benchmark.py
bench/oracle/: scorer.py  test_oracle.py  test_strands_adapter.py
bench/results/: anthropic_pair-coding_20260506-220130.json  e2e_protocol_inject_20260506-222132.json  framework_integration_docs_20260507-115043.json  framework_integration_docs_20260507-115043.md  framework_sandbox_hermes_20260507-114524.json  framework_sandbox_hermes_20260507-114722.json  framework_sandbox_openclaw_20260507-114912.json  framework_sandbox_paperclip_20260507-114835.json  framework_smoke_20260507-115851.json  gemini_conflict-heavy_20260506-203345.json  headless_browser_tests.json  inject_realism_20260506-220832.json  inject_realism_20260506-221020.json  latency_zero-infra_1778375990.json  latency_zero-infra_1778376121.json  latency_zero-infra_1778376200.json  mock_conflict-heavy_20260506-203317.json  mock_pair-coding_20260506-203354.json  mock_parallel-research_20260506-203359.json  multi_agent_product_dev_20260506-222917.json  multi_agent_product_dev_20260506-225159.json  openai_pair-coding_20260506-204100.json  organic_e2e_20260510-123341.json  soak_1778377286.json  (+51 more)
examples/: README.md  anthropic_smoke.py  coordinator_demo.py  crewai_style_product_dev.py  e2e_protocol_inject_test.py  inject_realism_test.py  l3_router_demo.py  langgraph_style_product_dev.py  multi_agent_product_dev.py  multi_backend_demo.py  openai_smoke.py  two_agents_conflict_demo.py  two_agents_with_real_llm.py
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
launch/: REDDIT_v0.2.8.md  RELEASE_NOTES_v0.2.8.md  TWITTER_v0.2.8.md
pressure-test/: SYNTHESIS.md  extract_and_publish.py
runtime/: README.md
sdk-python/: README.md  pyproject.toml
sdk-python/synapse/: __init__.py  agent.py  agent_context.py  bus.py  bus_inmemory.py  install.py  intend.py  llm_nla_hf.py  llm_thoughts.py  messages.py  router_inprocess.py  state.py  state_sqlite.py
sdk-python/synapse/adapters/: __init__.py  _isolation.py  base.py  mock.py
sdk-python/synapse/adapters/hosted/: __init__.py  anthropic_adapter.py  gemini_adapter.py  openai_adapter.py
sdk-python/synapse/adapters/local/: __init__.py  ollama_adapter.py
sdk-python/synapse/adapters/native/: __init__.py  vllm_modal_adapter.py
sdk-python/synapse/api/: __init__.py  server.py
sdk-python/synapse/audit/: __init__.py  conflict_detector.py  drift.py  events.py  pipeline.py  report.py  scope_inference.py
sdk-python/synapse/audit/importers/: __init__.py  azure.py  bedrock.py  jsonl.py  langsmith.py  openinference.py  vertex.py
sdk-python/synapse/beliefs/: __init__.py  api.py  divergence.py  extractor.py  live_detector.py
sdk-python/synapse/cli/: __init__.py  audit.py  bench.py  demo.py  main.py  spec_validate.py  up.py  watch.py
sdk-python/synapse/cli/_data/: docker-compose.yml
sdk-python/synapse/cli/_data/migrations/: 0001_initial_schema.sql
sdk-python/synapse/frameworks/: __init__.py  _sync_bridge.py  agno.py  autogen.py  crewai.py  google_adk.py  hermes.py  langchain.py  langgraph.py  llama_index.py  openai_agents.py  otel_live.py  pydantic_ai.py  smolagents.py  strands.py
sdk-python/synapse/integrations/: __init__.py  aider_hook.py  crewai_integration.py  hermes_integration.py  langgraph_integration.py
sdk-python/synapse/llm/: __init__.py  bridges.py  config.py
sdk-python/synapse/mcp/: __init__.py  server.py
sdk-python/synapse/policies/: __init__.py  base.py  builtin.py  critical.py  registry.py  templates.py
sdk-python/synapse/streaming/: __init__.py  server.py
sdk-python/synapse/watchers/: __init__.py  fs_watcher.py
sdk-python/tests/: test_adapter_attribution_e2e.py  test_adapter_health.py  test_agent_context.py  test_api_rest.py  test_audit.py  test_audit_scf_features.py  test_claude_code_artifacts.py  test_cli_watch.py  test_coordinator.py  test_envelope_and_messages.py  test_examples_crewai_marketing.py  test_hermes_integration.py  test_hosted_adapters.py  test_hosted_contracts.py  test_ide_plugins_smoke.py  test_integrations.py  test_l3_router.py  test_llm_thoughts_openai_pseudo.py  test_local_native_adapters.py  test_mcp_real_client.py  test_mcp_server.py  test_mock_adapter.py  test_multi_tenant.py  test_otel_live.py  test_policy_templates.py  test_scope_matcher.py  test_streaming_tail.py  test_sync_bridge.py  test_v026_bug_fixes.py  test_v026_hermes_runtime.py  test_v026_langgraph_autoattach.py  test_v026_openai_agents_install.py  test_v026_scope_from_args.py  test_v02_beliefs.py  test_v02_cli.py  test_v02_frameworks.py  test_v02_policies.py  test_v02_sdk.py  test_zero_infra.py
sdk-python/tests/fixtures/audit/: langgraph_helloworld.jsonl  langsmith_export.json  openai_tool_calls.jsonl  openinference_otel.json
sdk-typescript/: README.md  package-lock.json  package.json  tsconfig.json
spec/: README.md  adapter.md  conflict-semantics.md  positioning.md
ui/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
(+301 files in other folders)
