[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-protocol"
version = "0.2.1a0"
description = "The safety layer for multi-agent AI systems — audit existing traces for silent collisions, prevent them live, BYO-LLM"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Aadit Rajgor", email = "aadityarajgor27@gmail.com" }]
requires-python = ">=3.11"
keywords = ["agents", "multi-agent", "coordination", "protocol", "ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    # Core deps for `synapse audit` (the wedge) — keep this list tiny.
    # Audit reads existing trace exports; it has zero infrastructure needs.
    "pydantic>=2.6,<3",
    "jsonschema>=4.20",
]

[project.scripts]
synapse = "synapse.cli.main:main"

[project.optional-dependencies]
# Live coordination runtime: Redis bus + Postgres state graph + envelope IDs.
# Required only when calling synapse.intend() / synapse.install() / synapse up.
# The audit CLI does NOT need any of these — `pip install synapse-protocol`
# alone is enough to run `synapse audit ./traces.json`.
live = [
    "redis[hiredis]>=5.0,<6",
    "asyncpg>=0.29,<0.31",
    "python-ulid>=2.2,<4",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
hosted = [
    "anthropic>=0.40",
    "google-genai>=1.0",
    "openai>=1.50",
]
local = [
    "httpx>=0.27",         # Ollama HTTP API
]
gateway = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
all = [
    "synapse-protocol[live,hosted,local]",
]

[project.urls]
Homepage = "https://github.com/arajgor1/synapse"
Repository = "https://github.com/arajgor1/synapse"
Issues = "https://github.com/arajgor1/synapse/issues"

[tool.hatch.build.targets.wheel]
packages = ["synapse"]

[tool.hatch.build.targets.wheel.force-include]
"synapse/cli/_data/docker-compose.yml" = "synapse/cli/_data/docker-compose.yml"
"synapse/cli/_data/migrations" = "synapse/cli/_data/migrations"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
