[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-protocol-py"
version = "0.2.10"
description = "Audit, observability, conflict detection, intent capture, and reasoning capture for agentic teams that span vendor SDKs — AutoGen, CrewAI, LangGraph, smolagents, Agno, LlamaIndex, Pydantic AI, OpenAI Agents SDK, Google ADK, Hermes"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Aadit Rajgor", email = "aadityarajgor27@gmail.com" }]
requires-python = ">=3.11"
keywords = ["agents", "multi-agent", "coordination", "protocol", "ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    # Core deps for `synapse audit` AND `synapse.intend()` in zero-infra mode
    # (in-memory bus + SQLite). Keep this list tiny.
    "pydantic>=2.6,<3",
    "jsonschema>=4.20",
    # python-ulid mints envelope msg_ids; needed by Envelope.make() even in
    # zero-infra mode. Pure Python, ~30KB, no transitive deps.
    "python-ulid>=2.2,<4",
]

[project.scripts]
synapse = "synapse.cli.main:main"
synapse-mcp = "synapse.mcp.server:main"

[project.optional-dependencies]
# Live coordination runtime: Redis bus + Postgres state graph + envelope IDs.
# Required only when calling synapse.intend() / synapse.install() / synapse up.
# The audit CLI does NOT need any of these — `pip install synapse-protocol-py`
# alone is enough to run `synapse audit ./traces.json`.
live = [
    "redis[hiredis]>=5.0,<6",
    "asyncpg>=0.29,<0.31",
    # python-ulid moved to base deps in v0.2.9 so zero-infra
    # mode (in-memory bus + SQLite) works without [live].
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
hosted = [
    "anthropic>=0.40",
    "google-genai>=1.0",
    "openai>=1.50",
]
local = [
    "httpx>=0.27",         # Ollama HTTP API
]
gateway = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
all = [
    "synapse-protocol[live,hosted,local]",
]

[project.urls]
Homepage = "https://github.com/arajgor1/synapse"
Repository = "https://github.com/arajgor1/synapse"
Issues = "https://github.com/arajgor1/synapse/issues"

[tool.hatch.build.targets.wheel]
packages = ["synapse"]

# Data files under synapse/cli/_data/ are already picked up by
# `packages = ["synapse"]`. Don't force-include them again or PyPI
# rejects the wheel with "duplicate filename in local headers".

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
